<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="20dp">


    <TextView
        android:id="@+id/title_end_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/end_game"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_message"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/accumulated_points"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accumulated_points"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_player"
        android:inputType="text"
        android:importantForAutofill="no"
        android:layout_marginTop="30dp"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/save_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_data"
        android:layout_gravity="center"
        android:textSize="15sp"
        android:layout_marginTop="30dp"/>

</LinearLayout>