<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title_end_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wrong_answer"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/zero_points"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/zero_points"
        android:textSize="23sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_message"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="40dp"/>

    <Button
        android:id="@+id/end_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/end_game"
        android:layout_gravity="center"
        android:textSize="15sp"
        android:layout_marginTop="40dp"/>

</LinearLayout>