<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="20dp">

    <TextView
        android:id="@+id/response_validation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/response_validation"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="15dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accumulated_points"
        android:textSize="30sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="30dp"/>

    <TextView
        android:id="@+id/accumulated_points"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accumulated_points"
        android:textSize="40sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accumulated_points"
        android:textSize="40sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/button_continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_continue"
        android:layout_gravity="center"
        android:textSize="15sp"
        android:layout_marginTop="30dp"/>

</LinearLayout>