<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/level_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/number_level"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/question_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question_one"
            android:textSize="25sp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:gravity="center"/>

        <RadioGroup
            android:id="@+id/options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <RadioButton
                android:id="@+id/option_one"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/option_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/option_three"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/option_four"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="40dp">

        <Button
            android:id="@+id/end_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_game"
            android:layout_margin="10dp"/>

        <Button
            android:id="@+id/button_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_continue"
            android:layout_margin="10dp"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>